add todoListController and unit test

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 
-<html>
+<html ng-app='todoList'>
 
 <head>
   <meta charset='utf-8' />
@@ -13,7 +13,7 @@
   <script src="js/app.js"></script>
   </head>
 
-<body>
+<body ng-controller='todoListController as listCtrl'>
   <header class='navbar text-center navbar-default'>
     <h1>
       <img class='logo' alt="Brand" width="50px" src="images/logo.png">
