--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/todoListController.js"></script>
   </head>
 
 <body ng-controller='todoListController as listCtrl'>
