--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,17 @@
         <li class='list-group-item' ng-repeat='task in listCtrl.listTasks.items track by $index'>
           <div class='inputTask'>
             <form role='form' class='form-group'>
-              <input id='todoItem' type="checkbox"> 
-
+              <input ng-model='task.status' ng-true-value='0' ng-false-value='1'
+              id='todoItem' ng-click='listCtrl.storeData()' type="checkbox" /> 
               <span>
-                <input class='form-control readTask' readonly ng-show='!listCtrl.isToEdit($index)' ng-click='listCtrl.toggleEdit($index)' value='{{ task.name }}'type='text' />
-                <input class='editTask form-control' ng-show='listCtrl.isToEdit($index)' ng-blur='listCtrl.editTask()' type='text' ng-model='task.name' value='{{ task.name }}'>
+                <input class='form-control readTask' readonly 
+                  ng-show='!listCtrl.isToEdit($index)' 
+                  ng-click='listCtrl.toggleEdit($index)' value='{{ task.name }}'
+                  type='text' />
+                <input class='editTask form-control' 
+                  ng-show='listCtrl.isToEdit($index)' 
+                  ng-blur='listCtrl.editTask()' type='text' 
+                  ng-model='task.name' value='{{ task.name }}' />
               </span>
             </form>
           </div>
