count plural items

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       </ul>
 
       <div id='itemsLeftCount' >
-        <p><small>0 items left</small></p>
+        <p><small>{{ listCtrl.activeTasks() }} items left</small></p>
       </div>
 
     </article>
