--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="js/app.js"></script>
-  </head>
+</head>
 
 <body ng-controller='todoListController as listCtrl'>
 
@@ -78,7 +78,12 @@
     </section>
   </main>
 
-  <footer>
+  <footer >
+    <div class="container narrow row-fluid">
+      <div class='footer col-sm-12'>
+        <p class='text-center'>© 2015 Samuel Overloop. Created during <a href='www.makersacademy.com'>Makers Academy</a>, a bootcamp for developers</p> 
+      </div>
+    </div>
   </footer>
 </body>
 </html>
