--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,8 @@
   <footer >
     <div class="container narrow row-fluid">
       <div class='footer col-sm-12'>
-        <p class='text-center'>© 2015 Samuel Overloop. Created during <a href='www.makersacademy.com'>Makers Academy</a>, a bootcamp for developers</p> 
+        <p class='text-center'>© 2015 Samuel Overloop. Created during <a
+          href='http://www.makersacademy.com'>Makers Academy</a>, a bootcamp for developers</p> 
       </div>
     </div>
   </footer>
