--- a/public/index.html
+++ b/public/index.html
@@ -20,71 +20,22 @@
   </header>
 
   <main class='jumbotron col-md-6 col-md-offset-3'>
-    <section id='newTaskForm'>
 
-      <form class='form-inline' name='newTaskForm' ng-submit='newTaskForm.$valid && listCtrl.addTask()' novalidate>
-
-        <fieldset class='form-group'>
-          <label for='taskName'>
-            <input ng-model='listCtrl.newTask.name' class='form-control' id='taskName' placeholder='A new task...' type='text' required />
-          </label>
-        </fieldset>
-
-        <button type='submit' class='btn btn-primary'>Add new task</button>
-
-      </form>
-
-    </section>
+    <todo-form></todo-form>
 
     <article id='toDoList'>
-      <ul class='list-group'>
 
-        <li class='list-group-item' ng-repeat='task in listCtrl.listTasks.items
-        | filter: { status: listCtrl.filter} track by $index'>
-          <div class='inputTask'>
-            <form role='form' class='form-group'>
-              <input ng-model='task.status' ng-true-value='0' ng-false-value='1'
-              id='todoItem' ng-click='listCtrl.storeData()' type="checkbox" /> 
-              <span >
-                <input ng-class='{ strike: !task.status, editable: focused,
-                readable: !focused }' class='form-control'
-                ng-readonly='!focused' ng-model='task.name' value='{{ task.name
-                }}' type='text' ng-blur='focused=false' ng-focus='focused=true'
-                ng-change='listCtrl.storeData()' ng-model-options="{ updateOn:
-                'blur'}" />
-              </span>
-            </form>
-          </div>
-        </li>
-
-      </ul>
-
-      <div id='itemsLeftCount' >
-        <p><small>
-          <ng-pluralize count="listCtrl.activeTasks()"
-                        when="{ '0': 'No items left',
-                                'one': '1 item left',
-                                'other': '{} items left' }"></ng-pluralize>
-        </small></p>
-      </div>
+      <todo-list></todo-list>
+      <todo-count></todo-count>
 
     </article>
 
-    <section id='listControls'>
-      <button type="button" ng-click='listCtrl.filter=""' class="btn btn-primary custom">All</button>
-      <button type="button" ng-click='listCtrl.filter=1' class="btn btn-primary custom">Active</button>
-      <button type="button" ng-click='listCtrl.filter=0' class="btn btn-primary custom">Complete</button>
-      <button type="button" ng-click='listCtrl.clearCompleted()' class="btn btn-primary custom">Clear All</button>
-    </section>
+    <todo-filters></todo-filters>
+
   </main>
 
-  <footer >
-    <div class="container narrow row-fluid">
-      <div class='footer col-sm-12'>
-        <p class='text-center'>© 2015 Samuel Overloop. Created during <a
-          href='http://www.makersacademy.com'>Makers Academy</a>, a bootcamp for developers</p> 
-      </div>
-    </div>
-  </footer>
+  <todo-footer></todo-footer>
+
 </body>
+
 </html>
